# PociagiQT

./: .gitignore  CMakeLists.txt  README.md  inputcargotrain.cpp  inputcargotrain.h  inputcargotrain.ui  inputpassengertrain.cpp  inputpassengertrain.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  mainwindow.ui.autosave
include/: CargoTrain.h  Database.h  DateAndTime.h  Entry.h  PassengerTrain.h  QTChngProp.h  Train.h  WrongIndex.h  validation.h
src/: CargoTrain.cpp  Database.cpp  DateAndTime.cpp  Entry.cpp  PassengerTrain.cpp  Train.cpp  WrongIndex.cpp  main.cpp  validation.cpp
ui/: inputcargotrain.cpp  inputcargotrain.h  inputpassengertrain.cpp  inputpassengertrain.h  inputpassengertrain.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.qrc
